--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -75,7 +75,7 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap:10px;
-        margin:0 auto;
+        margin:0 auto 20px;
     }
 
     #analytics-page .charts-containers {
